<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csalazar.materialdesign.activities.StalkingActivity"
    tools:showIn="@layout/activity_stalking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialogoOk"
            android:text="@string/text_ok" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialogoYesNo"
            android:text="@string/dialog_yesno" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialogItems"
            android:text="@string/dialog_item" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialogSingle"
            android:text="@string/single_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialogMultiple"
            android:text="@string/multiple_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
