<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.csalazar.materialdesign.MainActivity">

    <Button
        android:id="@+id/btn_text_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openText"
        android:text="@string/main_menu_opt1" />

    <Button
        android:id="@+id/btn_image_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openImage"
        android:text="@string/main_menu_opt2" />

    <Button
        android:id="@+id/btn_selected_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openSelected"
        android:text="@string/main_menu_opt3" />

</LinearLayout>
